--- a/lab/repubblica/dna.html
+++ b/lab/repubblica/dna.html
@@ -59,16 +59,22 @@ La cessione a vita della centralità è uso da tempo indebito, da quando divenut
 
 Tant'è: non c'è ancora la Repubblica ma tuttora abusivamente persiste una amministrazione monarchica. Rispettiamo il senso delle parole. Avremo una guida sicura, patti giusti e con essi sodalizio, reciproca fiducia e buona sorte senza fine.
 
-  </p><p>
-
-Danilo D'Antonio<br>
-grossista d'idee, intelligenza biologica<br>
-del Laboratorio Eudemonia
-
   </p>
 
+<br><br>
+
+<div style="font-size:1.2em; text-align:right">
+
+<a href="../hl_it.htm" target="dda">Danilo D'Antonio</a><br>
+grossista d'idee, intelligenza biologica<br>
+del <a href="../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>
+
+</div>
+
+<br>
+
   <div class="index">
-    <a href="index_1.html">index</a>
+    <a href="index_1.html">___ La REPUBBLICA di SENSO COMPIUTO ___</a>
   </div>
 
 </div>
